<resources>
    <string name="app_name">ChatRoom</string>
    <string name="need_a_new_account">需要新帳號嗎？</string>
    <string name="reg_name">名字</string>
    <string name="reg_email">Email</string>
    <string name="reg_pass">密碼</string>
    <string name="reg_create_account">創建帳號</string>
    <string name="logout">登出</string>
    <string name="account_settings">帳號設定</string>
    <string name="alluser">全部使用者</string>
    <string name="already_have_account">已經有帳號了</string>
    <string name="login_your_account">登入您的帳號</string>
    <string name="your_email">您的信箱</string>
    <string name="your_password">您的密碼</string>
    <string name="logintext">登入</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_mood">目前心情</string>
</resources>
